# map-ai-py

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: sync-from-map-ai.sh
src/map_ai_py/: __init__.py  cli.py  detect.py
tests/: test_cli.py  test_detect.py
