[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "map-ai-py"
version = "0.1.0"
description = "MAP AI documentation scaffold — install & doctor CLI for Django, Flask, FastAPI, and plain Python projects"
readme = "README.md"
license = "MIT"
authors = [{ name = "Eric Mitkowski" }]
requires-python = ">=3.9"
keywords = ["map", "ai", "agents", "documentation", "scaffold", "django", "flask", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/larablocks/map-ai-py"
Repository = "https://github.com/larablocks/map-ai-py"
Issues = "https://github.com/larablocks/map-ai-py/issues"

[project.scripts]
map-ai-py = "map_ai_py.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/map_ai_py"]

[tool.hatch.build.targets.sdist]
include = ["src/map_ai_py", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
